// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default topic behavior 1`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  },
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"root_Topic_18CB51FA\\": {
        \\"name\\": \\"Topic-c8228fb7\\"
      }
    }
  }
}"
`;

exports[`default topic behavior 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Topic": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Topic/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "Topic",
                "path": "root/Default/Topic",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.15.2",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from queue name 1`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  },
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"root_TheSpectacularTopic_460D3DDF\\": {
        \\"name\\": \\"The-Spectacular-Topic-c8252318\\"
      }
    }
  }
}"
`;

exports[`replace invalid character from queue name 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The%Spectacular@Topic": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/The%Spectacular@Topic/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "The%Spectacular@Topic",
                "path": "root/Default/The%Spectacular@Topic",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.15.2",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`topic name valid 1`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  },
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"root_TheSpectacularTopic01_2487D43E\\": {
        \\"name\\": \\"The-Spectacular_Topic-01-c828760a\\"
      }
    }
  }
}"
`;

exports[`topic name valid 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The-Spectacular_Topic-01": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/The-Spectacular_Topic-01/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "The-Spectacular_Topic-01",
                "path": "root/Default/The-Spectacular_Topic-01",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.15.2",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`topic with subscriber function 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { console.log(\\"Received: \\", event); }
};
})())({

})"
`;

exports[`topic with subscriber function 2`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_TopicOnMessagec5395e41_IamRole_9BB6BE88\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_TopicOnMessagec5395e41_IamRolePolicy_9F04C0AC\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_TopicOnMessagec5395e41_IamRole_9BB6BE88.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_TopicOnMessagec5395e41_IamRolePolicyAttachment_763606DB\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_TopicOnMessagec5395e41_IamRole_9BB6BE88.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_TopicOnMessagec5395e41_379EBC3E\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Topic-OnMessage-c5395e41-c8eb4431\\"
          }
        },
        \\"function_name\\": \\"Topic-OnMessage-c5395e41-c8eb4431\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_TopicOnMessagec5395e41_IamRole_9BB6BE88.arn}\\",
        \\"runtime\\": \\"nodejs18.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_TopicOnMessagec5395e41_S3Object_D172367F.key}\\",
        \\"timeout\\": 30,
        \\"vpc_config\\": {
          \\"security_group_ids\\": [],
          \\"subnet_ids\\": []
        }
      }
    },
    \\"aws_lambda_permission\\": {
      \\"root_TopicOnMessagec5395e41_InvokePermissionc8228fb70d825c2a5610c610e5246d5313ea6bd1a2_032AF00D\\": {
        \\"action\\": \\"lambda:InvokeFunction\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_TopicOnMessagec5395e41_379EBC3E.function_name}\\",
        \\"principal\\": \\"sns.amazonaws.com\\",
        \\"source_arn\\": \\"\${aws_sns_topic.root_Topic_18CB51FA.arn}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Code_02F3C603\\": {
        \\"bucket_prefix\\": \\"code-c84a50b1-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_TopicOnMessagec5395e41_S3Object_D172367F\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sns_topic\\": {
      \\"root_Topic_18CB51FA\\": {
        \\"name\\": \\"Topic-c8228fb7\\"
      }
    },
    \\"aws_sns_topic_subscription\\": {
      \\"root_Topic_TopicTopicSubscriptionc5395e41_281A7990\\": {
        \\"endpoint\\": \\"\${aws_lambda_function.root_TopicOnMessagec5395e41_379EBC3E.arn}\\",
        \\"protocol\\": \\"lambda\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.root_Topic_18CB51FA.arn}\\"
      }
    }
  }
}"
`;

exports[`topic with subscriber function 3`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.2",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Handler": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Topic-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Topic": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "root/Default/Topic-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.snsTopic.SnsTopic",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Topic/Default",
                  },
                  "Topic-TopicSubscription-c5395e41": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.snsTopicSubscription.SnsTopicSubscription",
                      "version": "12.0.2",
                    },
                    "id": "Topic-TopicSubscription-c5395e41",
                    "path": "root/Default/Topic/Topic-TopicSubscription-c5395e41",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A pub/sub notification topic",
                  "title": "Topic",
                },
                "id": "Topic",
                "path": "root/Default/Topic",
              },
              "Topic-OnMessage-c5395e41": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "root/Default/Topic",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Topic-OnMessage-c5395e41/Asset",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Topic-OnMessage-c5395e41/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Topic-OnMessage-c5395e41/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Topic-OnMessage-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Topic-OnMessage-c5395e41/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8228fb70d825c2a5610c610e5246d5313ea6bd1a2": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaPermission.LambdaPermission",
                      "version": "12.0.2",
                    },
                    "id": "InvokePermission-c8228fb70d825c2a5610c610e5246d5313ea6bd1a2",
                    "path": "root/Default/Topic-OnMessage-c5395e41/InvokePermission-c8228fb70d825c2a5610c610e5246d5313ea6bd1a2",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Topic-OnMessage-c5395e41/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Topic-OnMessage-c5395e41",
                "path": "root/Default/Topic-OnMessage-c5395e41",
              },
              "Topic-OnMessageHandler-c5395e41": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "hidden": true,
                },
                "id": "Topic-OnMessageHandler-c5395e41",
                "path": "root/Default/Topic-OnMessageHandler-c5395e41",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.15.2",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
